@@ -12,10 +12,13 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -24,19 +27,20 @@ public class JWTFilter extends OncePerRequestFilter {
     private final JWTUtil jwtUtil;
     private final AuthService authService;
 
-    private static final List<String> WHITELIST = List.of(
+    private static final List<String> WHITELIST = Arrays.asList(
+            "/",
+            "/index.html",
             "/api/auth/login",
             "/api/auth/register",
             "/v3/api-docs",
             "/v3/api-docs/**",
-            "/v3/api-docs/swagger-config",
             "/swagger-ui/**",
             "/swagger-ui.html",
             "/webjars/**",
             "/swagger-resources/**",
-            "/api/docs",
-            "/api/docs/**"
-    );
+            "/api/docs/**",
+            "/assets/**",
+            "/static/**");
 
     public JWTFilter(JWTUtil jwtUtil, AuthService authService) {
         this.jwtUtil = jwtUtil;
@@ -48,75 +52,64 @@ public class JWTFilter extends OncePerRequestFilter {
             throws ServletException, IOException {
 
         String path = request.getRequestURI();
+        String method = request.getMethod();
 
-        if (isWhitelisted(path)) {
+        // Add CORS headers
+        response.setHeader("Access-Control-Allow-Origin", "*");
+        response.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
+        response.setHeader("Access-Control-Allow-Headers", "*");
+
+        if ("OPTIONS".equalsIgnoreCase(method)) {
+            response.setStatus(HttpServletResponse.SC_OK);
+            return;
+        }
+
+        if (isWhitelisted(path) || isStaticResource(path)) {
             filterChain.doFilter(request, response);
             return;
         }
 
+        String token = request.getHeader("Authorization");
+        if (token == null || !token.startsWith("Bearer ")) {
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.setContentType("application/json");
+            response.getWriter().write("{\"error\":\"Authorization header is missing\",\"status\":401}");
+            return;
+        }
+
+        token = token.substring(7);
+
         try {
-            String authHeader = request.getHeader("Authorization");
-
-            if (authHeader == null || authHeader.isBlank()) {
-                sendError(response, "Authorization header is missing", HttpServletResponse.SC_UNAUTHORIZED);
-                return;
-            }
-
-            if (!authHeader.startsWith("Bearer ")) {
-                sendError(response, "Invalid authorization header format", HttpServletResponse.SC_UNAUTHORIZED);
-                return;
-            }
-
-            String token = authHeader.substring(7);
-
-            if (token.isBlank()) {
-                sendError(response, "Token cannot be empty", HttpServletResponse.SC_UNAUTHORIZED);
-                return;
-            }
-
-            if (!jwtUtil.validateToken(token)) {
-                sendError(response, "Invalid or expired token", HttpServletResponse.SC_UNAUTHORIZED);
-                return;
-            }
-
             String username = jwtUtil.extractUsername(token);
-            Instructor instructor = authService.getInstructorFromToken(token);
+            if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+                UserDetails userDetails = authService.loadUserByUsername(username);
 
-            if (instructor == null) {
-                sendError(response, "User not found", HttpServletResponse.SC_UNAUTHORIZED);
-                return;
+                if (jwtUtil.validateToken(token, userDetails)) {
+                    UsernamePasswordAuthenticationToken authentication = new UsernamePasswordAuthenticationToken(
+                            userDetails, null, userDetails.getAuthorities());
+                    authentication.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+                    SecurityContextHolder.getContext().setAuthentication(authentication);
+                }
             }
-
-            UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                    instructor,
-                    null,
-                    Collections.singletonList(new SimpleGrantedAuthority("ROLE_INSTRUCTOR"))
-            );
-
-            SecurityContextHolder.getContext().setAuthentication(authToken);
             filterChain.doFilter(request, response);
-
-        } catch (ExpiredJwtException ex) {
-            sendError(response, "Token expired", HttpServletResponse.SC_UNAUTHORIZED);
-        } catch (MalformedJwtException | SignatureException ex) {
-            sendError(response, "Invalid token", HttpServletResponse.SC_UNAUTHORIZED);
-        } catch (Exception ex) {
-            logger.error("Authentication error", ex);
-            sendError(response, "Authentication failed", HttpServletResponse.SC_INTERNAL_SERVER_ERROR);
+        } catch (Exception e) {
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.setContentType("application/json");
+            response.getWriter().write("{\"error\":\"Invalid token\",\"status\":401}");
         }
     }
 
-    private void sendError(HttpServletResponse response, String message, int status) throws IOException {
-        response.setContentType("application/json");
-        response.setStatus(status);
-        response.getWriter().write(
-                String.format("{\"error\": \"%s\", \"status\": %d}", message, status)
-        );
+    private boolean isWhitelisted(String path) {
+        return WHITELIST.stream().anyMatch(pattern -> {
+            if (pattern.endsWith("/**")) {
+                String prefix = pattern.substring(0, pattern.length() - 3);
+                return path.startsWith(prefix);
+            }
+            return path.equals(pattern);
+        });
     }
 
-    private boolean isWhitelisted(String path) {
-        return WHITELIST.stream().anyMatch(path::equals) ||
-                path.startsWith("/v3/api-docs") ||
-                path.startsWith("/swagger-ui");
+    private boolean isStaticResource(String path) {
+        return path.matches(".*\\.(js|css|png|jpg|jpeg|gif|ico|html|svg|json|woff|woff2|ttf|eot)$");
     }
 }
